aSemanticoParser.java
// $ANTLR 3.5.3 aSemantico.g 2025-04-25 20:39:34

    import java.util.HashMap;
    import java.util.ArrayList;
    import javax.swing.JTextArea;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class aSemanticoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CDOUBLE", "CINT", "COMMA", "DOUBLE", 
		"ID", "INT", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SEMICOLON", 
		"VOID", "WS", "'('", "')'", "'*'", "'+'", "'-'", "'='", "'class'", "'{'", 
		"'}'"
	};
	public static final int EOF=-1;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int CDOUBLE=4;
	public static final int CINT=5;
	public static final int COMMA=6;
	public static final int DOUBLE=7;
	public static final int ID=8;
	public static final int INT=9;
	public static final int PRIVATE=10;
	public static final int PROTECTED=11;
	public static final int PUBLIC=12;
	public static final int RETURN=13;
	public static final int SEMICOLON=14;
	public static final int VOID=15;
	public static final int WS=16;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public aSemanticoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public aSemanticoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return aSemanticoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "aSemantico.g"; }


	    HashMap TSG = new HashMap(); // Tabla de símbolos global (para clases, atributos, métodos)
	    HashMap TSL = new HashMap(); // Tabla de símbolos local (para variables locales y argumentos)

	    HashMap<String, Integer> methodCallCount = new HashMap<>(); // Para rastrear el número de llamadas a cada método

	    // Tipos definidos
	    static final int INT_TYPE = 1;
	    static final int DOUBLE_TYPE = 2;
	    static final int CLASS_TYPE = 3;
	    static final int METHOD_TYPE = 4;
	    static final int ERROR_TIPO = 5; // ← agregado para errores de tipos
	    static final int ERROR_NO_DECLARADO = 6; // ← agregado para variables no declaradas

	    ArrayList<String> methodsToDelete = new ArrayList<>();
	    ArrayList<String> metodos = new ArrayList<>();
	    ArrayList<String> atributos = new ArrayList<>();
	    private JTextArea salida;

	    public void setSalida(JTextArea salida) {
	        this.salida = salida;
	    }

	    public void printError(String msg, Token token) {
	        String errorLocation = "";
	        if (token != null) {
	            errorLocation = "[línea " + token.getLine() + ":" + token.getCharPositionInLine() + "] ";
	        }
	        if (salida != null) {
	            salida.append(errorLocation + msg + "\n");
	        } else {
	            System.err.println("\033[31m" + errorLocation + msg + "\033[0m");
	        }
	    }

	    public void printError(String msg) {
	        printError(msg, null);
	    }

	    public void pushTSG(String id, String tipo, Token token){
	        Integer se_encuentra = (Integer) TSG.get(id);
	        if(se_encuentra == null){
	            if(tipo.equals("int")) TSG.put(id, INT_TYPE);
	            else if(tipo.equals("double")) TSG.put(id, DOUBLE_TYPE);
	            else if(tipo.equals("class")) TSG.put(id, CLASS_TYPE);
	            else if(tipo.equals("method")) TSG.put(id, METHOD_TYPE);

	            if (tipo.equals("method")) {
	                methodCallCount.put(id, 0); // Inicializar el contador de llamadas en 0
	            }

	        } else {
	            printError("Error redeclarando: " + id, token);
	        }
	    }

	    public void pushTSG(String id, String tipo){
	        pushTSG(id, tipo, null);
	    }
	    public void pushTSL(String id, String tipo, Token token){
	        Integer se_encuentra_local = (Integer) TSL.get(id);
	        Integer se_encuentra_global = (Integer) TSG.get(id);

	        if(se_encuentra_local == null){
	            if(se_encuentra_global != null){
	                 printError("Error redeclarando: " + id, token);
	            }else {
	                    if(tipo.equals("int")) TSL.put(id, INT_TYPE);
	                    else if(tipo.equals("double")) TSL.put(id, DOUBLE_TYPE);
	            }

	        } else {
	            printError("Error redeclarando: " + id, token);
	        }
	    }

	    public void pushTSL(String id, String tipo){
	        pushTSL(id, tipo, null);
	    }

	    public boolean findTSG(String id){
	        return TSG.containsKey(id);
	    }

	    public boolean findTSGForAtom(String id){
	        if(TSG.containsKey(id) && (((Integer)TSG.get(id) == INT_TYPE) || ((Integer)TSG.get(id) == DOUBLE_TYPE))){
	            return true;
	        }
	        return false;
	    }

	    public boolean findTSL(String id){
	        return TSL.containsKey(id);
	    }

	    public void clearTSL(){
	        TSL.clear();
	    }   

	    // Metodos para la deteccion de metodos seguros para eliminar
	    public void incrementMethodCallCount(String methodName) {
	        Integer count = methodCallCount.get(methodName);
	        if (count != null) {
	            methodCallCount.put(methodName, count + 1);
	        }
	    }

	    public void checkMethodsToDelete() {
	        for (String methodName : methodCallCount.keySet()) {
	            Integer callCount = methodCallCount.get(methodName);
	            if (callCount == 0 || callCount == 1) {
	                methodsToDelete.add(methodName);
	            }
	        }

	         for (String methodName : metodos) {
	                if(!methodCallCount.containsKey(methodName)){
	                   methodsToDelete.add(methodName);
	                }
	            }
			
			try {
				generateOptimizationReport();
			} catch (Exception e) {
				printError("Error al generar el reporte de optimización: " + e.getMessage());
			}	
	    } 



	// $ANTLR start "program"
	// aSemantico.g:133:1: program : ( clase )+ ;
	public final void program() throws RecognitionException {
		try {
			// aSemantico.g:133:8: ( ( clase )+ )
			// aSemantico.g:133:10: ( clase )+
			{
			// aSemantico.g:133:10: ( clase )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= PRIVATE && LA1_0 <= PUBLIC)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// aSemantico.g:133:10: clase
					{
					pushFollow(FOLLOW_clase_in_program21);
					clase();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "clase"
	// aSemantico.g:135:1: clase : modificAcceso 'class' ID '{' ( miembro )* '}' ;
	public final void clase() throws RecognitionException {
		Token ID1=null;

		try {
			// aSemantico.g:135:6: ( modificAcceso 'class' ID '{' ( miembro )* '}' )
			// aSemantico.g:136:5: modificAcceso 'class' ID '{' ( miembro )* '}'
			{
			pushFollow(FOLLOW_modificAcceso_in_clase33);
			modificAcceso();
			state._fsp--;

			match(input,23,FOLLOW_23_in_clase35); 
			ID1=(Token)match(input,ID,FOLLOW_ID_in_clase37); 

			        if(findTSG((ID1!=null?ID1.getText():null))) {
			            printError("Error: " + (ID1!=null?ID1.getText():null) + " ya declarado", ID1);
			        } else {
			            pushTSG((ID1!=null?ID1.getText():null), "class", ID1);
			        }
			    
			match(input,24,FOLLOW_24_in_clase41); 
			// aSemantico.g:142:11: ( miembro )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==DOUBLE||(LA2_0 >= INT && LA2_0 <= PUBLIC)||LA2_0==VOID) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// aSemantico.g:142:11: miembro
					{
					pushFollow(FOLLOW_miembro_in_clase43);
					miembro();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			match(input,25,FOLLOW_25_in_clase46); 

			        metodos.clear();
			        atributos.clear();
			        checkMethodsToDelete();
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "clase"



	// $ANTLR start "miembro"
	// aSemantico.g:148:1: miembro : ( metodo | atributo );
	public final void miembro() throws RecognitionException {
		try {
			// aSemantico.g:148:8: ( metodo | atributo )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= PRIVATE && LA3_0 <= PUBLIC)) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==DOUBLE||LA3_1==INT||LA3_1==VOID) ) {
					int LA3_2 = input.LA(3);
					if ( (LA3_2==ID) ) {
						int LA3_3 = input.LA(4);
						if ( (LA3_3==17) ) {
							alt3=1;
						}
						else if ( (LA3_3==COMMA||LA3_3==SEMICOLON) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 3, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA3_0==DOUBLE||LA3_0==INT||LA3_0==VOID) ) {
				int LA3_2 = input.LA(2);
				if ( (LA3_2==ID) ) {
					int LA3_3 = input.LA(3);
					if ( (LA3_3==17) ) {
						alt3=1;
					}
					else if ( (LA3_3==COMMA||LA3_3==SEMICOLON) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// aSemantico.g:148:10: metodo
					{
					pushFollow(FOLLOW_metodo_in_miembro55);
					metodo();
					state._fsp--;

					}
					break;
				case 2 :
					// aSemantico.g:148:19: atributo
					{
					pushFollow(FOLLOW_atributo_in_miembro59);
					atributo();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "miembro"



	// $ANTLR start "atributo"
	// aSemantico.g:150:1: atributo : ( modificAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON ;
	public final void atributo() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope tipo2 =null;

		try {
			// aSemantico.g:150:9: ( ( modificAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON )
			// aSemantico.g:150:11: ( modificAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON
			{
			// aSemantico.g:150:11: ( modificAcceso )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= PRIVATE && LA4_0 <= PUBLIC)) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// aSemantico.g:150:11: modificAcceso
					{
					pushFollow(FOLLOW_modificAcceso_in_atributo66);
					modificAcceso();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_tipo_in_atributo69);
			tipo2=tipo();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_atributo73); 

			        if(atributos.contains((id1!=null?id1.getText():null))) {
			            printError("Error redeclarando: " + (id1!=null?id1.getText():null), id1);
			        } else {
			            atributos.add((id1!=null?id1.getText():null));
			            pushTSG((id1!=null?id1.getText():null), (tipo2!=null?input.toString(tipo2.start,tipo2.stop):null), id1);
			        }
			    
			// aSemantico.g:157:7: ( COMMA id2= ID )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==COMMA) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// aSemantico.g:157:8: COMMA id2= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_atributo78); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_atributo82); 

					        if(atributos.contains((id2!=null?id2.getText():null))) {
					            printError("Error redeclarando: " + (id2!=null?id2.getText():null), id2);
					        } else {
					            atributos.add((id2!=null?id2.getText():null));
					            pushTSG((id2!=null?id2.getText():null), (tipo2!=null?input.toString(tipo2.start,tipo2.stop):null), id2);
					        }
					    
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_atributo88); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "atributo"



	// $ANTLR start "metodo"
	// aSemantico.g:166:1: metodo : ( modificAcceso )? tipo ID '(' ( decl_arg )? ')' '{' ( instruccion )* '}' ;
	public final void metodo() throws RecognitionException {
		Token ID3=null;

		try {
			// aSemantico.g:166:7: ( ( modificAcceso )? tipo ID '(' ( decl_arg )? ')' '{' ( instruccion )* '}' )
			// aSemantico.g:167:5: ( modificAcceso )? tipo ID '(' ( decl_arg )? ')' '{' ( instruccion )* '}'
			{
			// aSemantico.g:167:5: ( modificAcceso )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( ((LA6_0 >= PRIVATE && LA6_0 <= PUBLIC)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// aSemantico.g:167:5: modificAcceso
					{
					pushFollow(FOLLOW_modificAcceso_in_metodo99);
					modificAcceso();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_tipo_in_metodo102);
			tipo();
			state._fsp--;

			ID3=(Token)match(input,ID,FOLLOW_ID_in_metodo104); 

			        if(metodos.contains((ID3!=null?ID3.getText():null))) {
			            printError("Error: Método " + (ID3!=null?ID3.getText():null) + " ya declarado en esta clase", ID3);
			        } else {
			            metodos.add((ID3!=null?ID3.getText():null));
			            pushTSG((ID3!=null?ID3.getText():null), "method", ID3);
			        }   
			    
			match(input,17,FOLLOW_17_in_metodo108); 
			// aSemantico.g:174:11: ( decl_arg )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==DOUBLE||LA7_0==INT||LA7_0==VOID) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// aSemantico.g:174:11: decl_arg
					{
					pushFollow(FOLLOW_decl_arg_in_metodo110);
					decl_arg();
					state._fsp--;

					}
					break;

			}

			match(input,18,FOLLOW_18_in_metodo113); 
			match(input,24,FOLLOW_24_in_metodo115); 
			// aSemantico.g:174:29: ( instruccion )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( ((LA8_0 >= DOUBLE && LA8_0 <= INT)||LA8_0==RETURN||LA8_0==VOID) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// aSemantico.g:174:29: instruccion
					{
					pushFollow(FOLLOW_instruccion_in_metodo117);
					instruccion();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			match(input,25,FOLLOW_25_in_metodo120); 
			 clearTSL(); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "metodo"



	// $ANTLR start "instruccion"
	// aSemantico.g:176:1: instruccion : ( asignacion | decl_local | llamadaMetodo | retorno );
	public final void instruccion() throws RecognitionException {
		try {
			// aSemantico.g:177:5: ( asignacion | decl_local | llamadaMetodo | retorno )
			int alt9=4;
			switch ( input.LA(1) ) {
			case ID:
				{
				int LA9_1 = input.LA(2);
				if ( (LA9_1==22) ) {
					alt9=1;
				}
				else if ( (LA9_1==17) ) {
					alt9=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 9, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE:
			case INT:
			case VOID:
				{
				alt9=2;
				}
				break;
			case RETURN:
				{
				alt9=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
			switch (alt9) {
				case 1 :
					// aSemantico.g:177:7: asignacion
					{
					pushFollow(FOLLOW_asignacion_in_instruccion134);
					asignacion();
					state._fsp--;

					}
					break;
				case 2 :
					// aSemantico.g:178:7: decl_local
					{
					pushFollow(FOLLOW_decl_local_in_instruccion142);
					decl_local();
					state._fsp--;

					}
					break;
				case 3 :
					// aSemantico.g:179:7: llamadaMetodo
					{
					pushFollow(FOLLOW_llamadaMetodo_in_instruccion150);
					llamadaMetodo();
					state._fsp--;

					}
					break;
				case 4 :
					// aSemantico.g:180:7: retorno
					{
					pushFollow(FOLLOW_retorno_in_instruccion158);
					retorno();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "instruccion"



	// $ANTLR start "llamadaMetodo"
	// aSemantico.g:183:1: llamadaMetodo : ID '(' ( expr ( ',' expr )* )? ')' SEMICOLON ;
	public final void llamadaMetodo() throws RecognitionException {
		Token ID4=null;

		try {
			// aSemantico.g:184:5: ( ID '(' ( expr ( ',' expr )* )? ')' SEMICOLON )
			// aSemantico.g:184:7: ID '(' ( expr ( ',' expr )* )? ')' SEMICOLON
			{
			ID4=(Token)match(input,ID,FOLLOW_ID_in_llamadaMetodo175); 
			match(input,17,FOLLOW_17_in_llamadaMetodo177); 
			// aSemantico.g:184:14: ( expr ( ',' expr )* )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( ((LA11_0 >= CDOUBLE && LA11_0 <= CINT)||LA11_0==ID||LA11_0==17) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// aSemantico.g:184:15: expr ( ',' expr )*
					{
					pushFollow(FOLLOW_expr_in_llamadaMetodo180);
					expr();
					state._fsp--;

					// aSemantico.g:184:20: ( ',' expr )*
					loop10:
					while (true) {
						int alt10=2;
						int LA10_0 = input.LA(1);
						if ( (LA10_0==COMMA) ) {
							alt10=1;
						}

						switch (alt10) {
						case 1 :
							// aSemantico.g:184:21: ',' expr
							{
							match(input,COMMA,FOLLOW_COMMA_in_llamadaMetodo183); 
							pushFollow(FOLLOW_expr_in_llamadaMetodo185);
							expr();
							state._fsp--;

							}
							break;

						default :
							break loop10;
						}
					}

					}
					break;

			}

			match(input,18,FOLLOW_18_in_llamadaMetodo191); 
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_llamadaMetodo193); 
